-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
get_root_path() returns (for instance) path to "lustre" mount instead "lustre1"
because last symbol is not taking in account during comparison.
This bug has influence to get_root_path() users.
For example, fid2path use get_root_path().
mount -t lustre
/dev/mapper/mds1_flakey on /mnt/lustre-mds1 type lustre (ro,context=unconfined_u:object_r:user_tmp_t:s0,svname=lustre-MDT0000,mgs,osd=osd-ldiskfs,user_xattr,errors=remount-ro)
/dev/mapper/ost1_flakey on /mnt/lustre-ost1 type lustre (ro,context=unconfined_u:object_r:user_tmp_t:s0,svname=lustre-OST0000,mgsnode=192.168.1.227@tcp,osd=osd-ldiskfs,errors=remount-ro)
/dev/mapper/ost2_flakey on /mnt/lustre-ost2 type lustre (ro,context=unconfined_u:object_r:user_tmp_t:s0,svname=lustre-OST0001,mgsnode=192.168.1.227@tcp,osd=osd-ldiskfs,errors=remount-ro)
192.168.1.227@tcp:/lustre on /mnt/lustre type lustre (rw,seclabel,flock,user_xattr,lazystatfs)
/tmp/lustre2-mdt on /mnt/lustre2-mds1 type lustre (ro,context=unconfined_u:object_r:user_tmp_t:s0,svname=lustre2-MDT0000,mgsnode=192.168.1.227@tcp,osd=osd-ldiskfs,user_xattr,errors=remount-ro)
/tmp/lustre2-ost1 on /mnt/lustre2-ost1 type lustre (ro,context=unconfined_u:object_r:user_tmp_t:s0,svname=lustre2-OST0000,mgsnode=192.168.1.227@tcp,osd=osd-ldiskfs,errors=remount-ro)
/tmp/lustre2-ost2 on /mnt/lustre2-ost2 type lustre (ro,context=unconfined_u:object_r:user_tmp_t:s0,svname=lustre2-OST0001,mgsnode=192.168.1.227@tcp,osd=osd-ldiskfs,errors=remount-ro)
192.168.1.227@tcp:/lustre2 on /mnt/lustre2 type lustre (rw,seclabel,flock,lazystatfs)
lfs path2fid /mnt/lustre2/foodir3
[0x200000401:0x1:0x0]
lfs fid2path lustre2 [0x200000401:0x1:0x0]
lfs fid2path: cannot find '[0x200000401:0x1:0x0]': No such file or
directory
umount /mnt/lustre
lfs fid2path lustre2 [0x200000401:0x1:0x0]
foodir3